--- a/exercises/Projetinho/index.html
+++ b/exercises/Projetinho/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <nav>
-    <a href="#">Home</a>
-    <a href="#" target="_blank">forum</a>
+    <a href="index.html">Home</a>
+    <a href="forum.html" target="_blank">forum</a>
     <a href="#" target="_blank">recommendations</a>
-    <a href="#">profile</a>
+    <a href="profile.html">profile</a>
 </nav>
     <header>
         <h1>Welcome to Keyboards Enjoyers</h1>
