--- a/ex023/fundo006.html
+++ b/ex023/fundo006.html
@@ -6,17 +6,26 @@
     <title>Document</title>
     <style>
         body{
-            height:100vh;
+
+            height: 100vh;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+
+            /*height:100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shorthand =
+             background > color > image > position > repeat > [size] > attachment */
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +35,7 @@
 <body>
     <main>
         <h1>teste de imagem</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam suscipit consequuntur velit minima! Rem omnis at eligendi neque, harum dolor expedita perspiciatis velit eum autem quas explicabo tempora, exercitationem eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nulla iure nesciunt reprehenderit sequi maiores at architecto in praesentium! Totam voluptatum ipsam ducimus nobis doloribus vel sit consectetur animi incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam facere veritatis quibusdam soluta, ipsa quo ut dolores fugiat aut iusto eos blanditiis dolore ipsam doloremque impedit voluptatem et, dolorem magni.</p>
         
     </main>
 </body>
