--- a/ex025/index.html
+++ b/ex025/index.html
@@ -12,8 +12,8 @@
         }
 
         table{
-            height: 400px;
-            width: 400px;
+            height: 500px;
+            width: 600px;
             border-collapse: collapse;
             
         }
@@ -25,6 +25,8 @@
             padding: 8px;
             text-align: center;   /*ALINHAMENTO HORIZONTAL */
             vertical-align: top; /*ALINHAMENTO VERTICAL */
+            background-image: url(image/cover2.webp);
+            background-size: cover;
         }
 
         .numero{
